[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_utils"
version = "0.1.0"
description = "Network automation utilities"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "python-dotenv",
    "pyyaml",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
] 